Kernel BUG with AMDGPU when resuming from system suspend
Brief summary of the problem:
I have a laptop (HP 15s-eq2147ng) which comes with a AMD GPU named Lucienne. In the month that I have been using it I have observed that sometimes the display is completely frozen after resuming a system suspend. Network still works so I can perform a clean reboot via ssh.
The journal contains traces of kernel bugs that are always correlated with a resuming from suspend (although not completely sure whether fully correlated with the freezes). The likelihood of the kernel bug happening is not very large: until now 3 kernel bugs after 71 suspends.
The OS is a stock Debian Bullseye installation with the following kernel:
Linux hostname 5.10.0-8-amd64 #1 SMP Debian 5.10.46-5 (2021-09-23) x86_64 GNU/Linux
I attach the kernel bug trace as shown in the syslog
, the output of lspci
, lshw
and acpidump
. I also attach the output of journalctl | grep amdgpu
in case it is useful.
Hardware description:
- CPU: AMD Ryzen 5 5500U with Radeon Graphics
- GPU: 03:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Lucienne [1002:164c] (rev c2)
- System Memory: 16GiB
- Display(s): laptop display. Sometimes I connect also an external HDMI monitor, but I don't remember having it connected when the display was frozen.
- Type of Display Connection: eDP
System information:
- Distro name and Version: Debian GNU/Linux 11 (bullseye)
- Kernel version: Linux hostname 5.10.0-8-amd64 #1 (closed) SMP Debian 5.10.46-5 (2021-09-23) x86_64 GNU/Linux
- AMD official driver version: The one that comes with the kernel installed.
Attached files:
syslog snippet with the kernel bug